--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ div{
     display: block;
 }
 
+.kun{
+    position: relative;
+    text-align-last: auto;
+    margin-left: 500px;
+    margin-right: 500px;
+    margin-top: -130px;
+    width: 500px;
+}
+
 .kunbela{
     position: absolute;
     top: 480px;
@@ -31,3 +40,4 @@ p{
 blockquote::before{
     color: gray
 }
+
