--- a/style.css
+++ b/style.css
@@ -1,23 +1,14 @@
 img{
     width: 100%;
+    position: absolute;
     height: 0%;
     position: relative;
     top: 0;
     left: 0;
     z-index: 1;
 }
-
 div{
     display: block;
-}
-
-.kun{
-    position: relative;
-    text-align-last: auto;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-top: -130px;
-    width: 500px;
 }
 
 .kunbela{
@@ -40,4 +31,3 @@ p{
 blockquote::before{
     color: gray
 }
-
