--- a/style.css
+++ b/style.css
@@ -26,6 +26,18 @@ img {
   h1 {
     margin: 0px;
   }
+  h4{
+    font-size: 240%;
+    font-style: normal;
+    font-weight: bolder;
+    color: white;
+    background-color: rgb(68,68,68);
+    padding: 40px;
+    border: 20px;
+    width: 550px;
+    position: relative;
+    left: -50px;
+  }
   span{
     font-size: 14px;
     font-weight: 25px;
