--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ img {
     margin: 0px;
   }
   h4{
-    font-size: 240%;
+    font-size: 200%;
     font-style: normal;
     color: white;
     background-color: rgb(68,68,68);
@@ -36,6 +36,7 @@ img {
     position: relative;
     left: -50px;
     font-family: 'Abril Fatface';
+    font-weight: lighter;
   }
   h4::before{
     display: block;
