--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 img {
     position: relative;
-    width: 70%;
-    margin-left: 260px;
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 20px;
     margin-top: 0px;
   }
   .kun {
